# rust-rest-sample

./: Cargo.toml
migrations/: 20240507233955_create_initial_tables.sql
src/: main.rs
