[package]
name = "testapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15.7" }
axum = { version = "0.7.5", features = ["macros", "http2", "multipart", "ws"] }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-private", "typed-header", "multipart"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["filter-by-regex", "serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
